Done: swagger for users
